--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>ur5_force_control1</name>
+  <name>ur5_force_control</name>
   <version>0.0.0</version>
-  <description>The ur5_force_control1 package</description>
+  <description>The ur5_force_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ur5_force_control1</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ur5_force_control</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
