--- a/forces_processing/package.xml
+++ b/forces_processing/package.xml
@@ -31,10 +31,16 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>contact_control</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_kinematics</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>contact_control</run_depend>
+  <run_depend>moveit_core</run_depend>
+  <run_depend>moveit_kinematics</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
