--- a/forces_processing/package.xml
+++ b/forces_processing/package.xml
@@ -34,6 +34,7 @@
   <build_depend>contact_control</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_kinematics</build_depend>
+  <build_depend>ur5_moveit</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -41,6 +42,7 @@
   <run_depend>contact_control</run_depend>
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_kinematics</run_depend>
+  <run_depend>ur5_moveit</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
