--- a/forces_processing/package.xml
+++ b/forces_processing/package.xml
@@ -35,6 +35,7 @@
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_kinematics</build_depend>
   <build_depend>ur5_moveit</build_depend>
+  <build_depend>cartesian_impedance_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -43,6 +44,7 @@
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_kinematics</run_depend>
   <run_depend>ur5_moveit</run_depend>
+  <run_depend>cartesian_impedance_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
